--- a/2024.10.26.2/DJI_20241016132310_0154_D.md
+++ b/2024.10.26.2/DJI_20241016132310_0154_D.md
@@ -11,26 +11,18 @@
 
 ## 视频备注
 
-### 核心内容
-用户主要讨论英语听说考试的成绩和练习情况，表达了对当前成绩的不满和未来的学习决心。
+做英语听说练习，part c，0.2的难度实际上应该是0.6，拿了十八分
 
-### 具体要点
-1. **成绩反馈**：
-   - 用户提到自己得了18分，认为难度不高，但对自己的表现满意。
-   - 另一项考试（可能是“拍闭”）得了11分，总分加起来可能是45分。
-   - 用户提到完整度、流利度和准确性都很低，几乎为零。
+今天上午的考试，才拿了9.5分，全班倒数第一，听说太烂了
 
-2. **自我评价**：
-   - 用户认为自己的听说能力较差，但第一次练习能得18分已经感到满意。
-   - 提到如果按照某种方式练习，可能不会那么“出丑”。
+别人总分50我才拿30多分
 
-3. **未来计划**：
-   - 用户决心每天做两套练习，计划完成180套（或260套）题目。
-   - 表达了通过努力提升高考听说成绩的信心，并提到即使失败也愿意接受结果。
+part c今天课上考试24分就拿9.5分，又不流畅也不完整，也不准确
 
-### 情绪与态度
-- 用户对成绩有自嘲和无奈，但整体态度积极，表现出通过努力改变现状的决心。
-- 语言中带有口语化和情绪化的表达，如“烂就烂吧”“费就费了吧”，显示出对现状的接受和对未来的坚持。
+刚刚的题分数好高，有18分，第一次做这道题，这个分数非常满意
 
-### 总结
-用户通过分析自己的英语听说考试成绩，认识到自身的不足，并制定了明确的练习计划，展现了积极面对挑战的态度。
+ 刚刚做part B，11分。一共一套卷子大概45分，到了品均分
+
+现在好烂，以后多努努力，每天做两篇，做180套卷子做完我不幸高考的时候分数上不去
+
+真上不去那就读大专吧，重开吧（都是在开玩笑）
