--- a/2024.10.26.2/DJI_20241017224214_0161_D.md
+++ b/2024.10.26.2/DJI_20241017224214_0161_D.md
@@ -11,19 +11,22 @@
 
 ## 视频备注
 
-1. **时间流逝的紧迫感**
-- 高考倒计时从300天骤减至200多天
-- 用"两场百日冲刺"类比时间消逝之快
-- 中考百日冲刺的记忆与当下产生重叠焦虑
+感觉离300天倒计时才刚刚过去没多久，怎么就快200天倒计时了
 
-2. **学习进展的矛盾心理**
-- 感觉"学得不够多"但已被"锁上五届"（可能指复习进度）
-- 独立推导数学定理（定比点差法）获得成就感
-- 对20分试题成绩既懊恼又看到进步可能
+感觉突然高三快过三分之一了，感觉还没学多少东西，感觉时间过的非常快
 
-3. **行动困境与自我激励**
-- 意识到需要保持"感觉"和持续行动
-- 决定用现有文字记录作为未来联系文本
-- 自我告诫不要因时间压力放弃写作练习
+第一次感觉时间过的这么快，
 
-文本呈现典型备考生的心理状态：在时间压力、能力质疑与碎片化成就感中挣扎，最终试图通过记录和坚持寻找出路。语言特征显示思维跳跃且充满内省，反映高压学习状态下的心理活动。
+当时中考的时候是100天冲刺，三年就冲刺100天把成绩提上去
+
+感觉当时的100天挺漫长的，但是对于现在而言，100天就是一眨眼的事情，300天也就是两眨眼的事情
+
+今天开心的事情有2个
+
+第一个是今天晚上推导定比点差的题，阿氏圆加圆锥曲线的大题，一整页草稿纸的过程基本都是自己独立推导出来的，思路非常清晰，一气呵成
+
+今天的听说练习，做过几次之后part c有20分，这是第一次，前几天还是9.5分，感觉非常爽，终于有20分了，也有可能是题的问题。感觉总是有进步的。
+
+当然不开心的事情也是有的，比如数学考的一塌糊涂。英语也感觉不对
+
+今晚再刷一套英语听说或者再写一篇英语作文，看了看e听说上面的读写专项，想着以后如果有时间就写写，拿这个练习作文（实际上后来也没写）
