--- a/2024.10.26.2/DJI_20241019222856_0162_D.md
+++ b/2024.10.26.2/DJI_20241019222856_0162_D.md
@@ -11,29 +11,28 @@
 
 ## 视频备注
 
-**时间规划与执行矛盾**
-- 制定从18:00到24:00的六小时学习计划
-- 实际执行存在明显落差，产生焦虑情绪
-- 完成生物和语文作业，但效率不理想
+周六调休
 
-**具体时间记录**
-- 18:00-24:00 主要学习时段
-- 凌晨1:00-2:30 仍在继续学习
-- 次日计划缩减为4-5小时学习时间
+家长不在家，我要往死里卷
 
-**学习内容**
-- 完成生物科目作业（具体数量不明确）
-- 完成语文作业及病句练习
-- 提到"全国建议券"作文相关练习
+这周末玩嗨了，手机电脑玩太多了，6点起床玩手机玩了6小时，玩的很累，本来是想好好学习的
 
-**存在的问题**
-1. 计划与执行严重脱节
-2. 存在熬夜学习现象（至凌晨2:30）
-3. 自我质疑学习效果
-4. 提到"练了两个月还成仇"，显示长期效果不佳
+终于理解了去年的全国卷1卷的作文：成为时间的主人 这个话题，要成为时间的主人而不是时间的仆人，我这真是成为时间的仆人了，被手机奴役了。我现在很忏悔，今天就做了点摘抄，把生物作业做了，语文数学没碰，英语作业做完了，物理作业做完了，化学在学校做的，生物做完了。一天就做了两科目的内容，再看了几分钟的生物。
 
-**改进建议**
-- 需要建立更合理的时间管理方法
-- 注意保证充足睡眠
-- 建议制定可落实的短期目标
-- 需要建立有效的学习反馈机制
+今晚要拿下听说，语文作业要做完，分别是1小时和半小时。现在是十点半，做到十二点
+
+生物做40分钟，或者算1小时吧
+
+然后再练字，半个小时，到一点半再睡觉
+
+明天不需要带生物大本。
+
+如果还有精力的话还要刷1小时的病句题，今天2点半睡觉
+
+明天可以不需要这么早起床，六点半起床吧（现在以大学生的视角看感觉好矛盾，这6点半起床是晚起吗，我现在早八都起不来，可能当时的内心也是矛盾的吧，这只不过是当时内心想法的外显）。睡觉四小时应该够吧，刚刚泡了一杯咖啡，现在还是热的
+
+明天早上弄主科，再灌一杯咖啡应该问题不大（实则问题非常大，不能搞持久战，伤害身体）。明天上午要上数学培优课。中午睡觉1小时，一共睡5小时一天。
+
+还是觉得太忏悔了，做了这么多的规划这么多的to do这么多代办贴在墙上，都没有落实
+
+，对自己感到不满，练习了两个月的字还是丑，其他的也没啥了，今天聊到这里
