--- a/2024.10.26.2/DJI_20241020010608_0163_D.md
+++ b/2024.10.26.2/DJI_20241020010608_0163_D.md
@@ -11,32 +11,40 @@
 
 ## 视频备注
 
-1. **学习状态与压力**
-   - 正在学习生物等科目，但进度落后（“生物300人一期时间”、“1.2几秒的内容没看完”）
-   - 感到极度疲惫（“好累”、“特别累”），但仍在坚持学习
-   - 有大量待完成的学习任务（单子、考试、作文等）
+现在已经学到1点了
 
-2. **时间紧迫感**
-   - 距离考试剩余23310天（可能为笔误，实际应为233天或类似）
-   - 意识到时间不足（“你就是有点晚”）
-   - 每日作息不规律（凌晨1点半睡，6点起床）
+生物资料（一生儿的资料）有370页，还剩下50页。还没练字
 
-3. **自我激励与矛盾**
-   - 试图通过咖啡/红牛提神
-   - 意识到需要更努力（“都要学”、“多多做题”）
-   - 但存在拖延和逃避倾向（“我不要看了”、“喝酒浪费时间”）
+平板打开了b站，要看一英儿的读后续写网课，一节课1.5小时，都没看，语法课也没有看
 
-4. **对现实的抽离感**
-   - 用“梦”形容当前状态（“活在梦里”）
-   - 对学习资料（毛巾、单子、视频参数）产生琐碎观察
-   - 出现跳跃性思维和重复性表达
+都很重要，可惜没时间
 
-5. **技术相关备注**
-   - 提到视频参数（1080p/30fps）
-   - 关注电子设备使用体验
+一点钟了还需要继续学，好累
 
-建议方向：
-- 制定具体学习计划，拆分任务
-- 调整作息保证睡眠
-- 减少自我施压，专注当下任务
-- 适当休息避免过度疲劳
+手表上的压力和心率都是正常
+
+等一下把生物复习完，然后再花十五分钟练习一篇字帖
+
+尽量1点半前睡觉。今天喝了一杯红牛两杯咖啡也不是非常的困，哦还有一杯可乐，不困但是非常累。感觉肾是虚的，腰是酸的，明天还需要去打羽毛球，感觉17岁18岁就垂垂老矣，感觉这样都活不到40岁，感觉这个青春就是在燃烧声明
+
+打开b站看人家的青春，看未闻花名的高播放量演奏视频感叹，别人的青春的音乐，未闻花名，教室，自信，优美，帅气的男生，孤独的音乐教室，木质的熟悉的破旧的课桌，夕阳，树影组成的。这才是青春，这是梦啊。我感觉自己活在梦里，但是我又在看梦，在做梦。这个梦看起来是美好的，但是这个梦美好吗，我感觉不到他的美好，但是我又从别人的身上看到了他的美好，这很矛盾啊。长叹一声气。感觉这也没什么好看的。剩下的是网课，背书，背单词。
+
+不背单词app又更新了，把百词斩的单词背了就来背这个
+
+要把3500单词背熟悉，百词斩还差几百个没背
+
+忘记的多，考试也没什么进步，还有八百多单词要背，马上就要考试了，马上就是校运会了，我要往死里背，往死里写题。
+
+校运会我要往死里内卷
+
+纸条app也好久没有看了，作文现在我写的又烂，又是一夜回到解放前的感觉。
+
+看现在纸条app今天在讲“元白”友谊。我在想运动会要不要去合照，要不高三的运动会留下点东西。我看很多人在抱怨在网上后悔，当初高中如果.....我现在还有230天，还有一点机会去抓住高中的一点小尾巴，哦我也不确定能不能真的抓住
+
+我现在非常累，还需要背书背单词背古文背例子背生物背范文搞听说，感觉很难受，感觉离死亡能不能快点啊
+
+纸条上的内容在挑选，看了看庄子相关的内容，感觉还是没有什么好看的内容，还是回去听完课吧
+
+我现在开的录制规格是1080p30fps，刚刚好，比较适合，可以长时间不需要格式化不需要换卡，128g的卡还可以录制很久，现在300过了一半不到，还有一张64g的卡，到时候都可以不需要拷贝卡了，录制1年只录制1080p就行（实则不然，后面其实录制了很多的4k），感觉没有什么必要，哔哩哔哩的视频压缩又严重，录制4k占空间，感觉很多内容的用处都不是很大，只是为了留下来，反而音频更加的重要，要拍的东西重要的东西也不多，真要拍的时候也会开4k开hdr
+
+今天继续苦战去了
