--- a/2024.10.26.2/DJI_20241020020519_0165_D.md
+++ b/2024.10.26.2/DJI_20241020020519_0165_D.md
@@ -11,25 +11,20 @@
 
 ## 视频备注
 
-总结结果: 这段内容表达了强烈的疲惫和不满情绪，主要包含以下几点：
+在洗手间对着镜子录制
 
-1. **身心俱疲的状态**
-   - 描述身体极度疲劳（ATP和能量降低）
-   - 出现思维空白、脚步混乱等生理反应
-   - 提到刷牙时都感到困难
+有一种累，叫我站在地上，走两步路，脚已经软了
 
-2. **对高压生活的控诉**
-   - 批判每天工作18小时、只睡4-5小时的生活
-   - 质疑这种生活的意义（"这算什么人生"）
-   - 用"狗屁"强烈否定这种生活方式
+整个人都快塌下来了这样的一种累
 
-3. **两种特殊状态描述**
-   - 一种是不管做什么都感到精力不足的状态
-   - 另一种是说不清但确实存在的疲惫感
+我心率只有80，但是我气喘吁吁，腰酸背痛，感觉整个身体的atp合成量急剧降低，消耗量急剧上升
 
-4. **情感宣泄**
-   - 反复强调"太累了"
-   - 通过粗俗用语表达愤怒和无奈
-   - 提到母亲关心的细节，暗示缺乏支持
+特别特别累
 
-整体呈现出一个在高压下濒临崩溃的人的真实心声，反映了过度劳累对身心造成的严重伤害。
+然后，（在漱口）想说累，也知道要说什么，有气无力，累到不想说话了，只能一遍刷牙一遍说（用的是电动牙刷，新牙刷，usmile的）。（长感叹到）高三是真的累啊。就像是网上说的，以后只会回忆战友而不会回忆战壕。（漱口中）。真的是。。我现在感觉。。刚刚。。稍微一低头，感觉要睡着了，现在一抬头感觉脑子是空白的，脚是软的
+
+这是给人活的吗
+
+b站有人说，上次每天工作18小时睡5小时的人还是从非洲运到美洲的黑奴
+
+那我算什么，每天睡四五个小时，其他时间都在学习，这算什么人生，（骂）这算什么狗屁。还好现在家里没有人，爱怎么骂怎么骂，太爽了（激动得摆手手）。2点了，现在，现在是高三啊，痛苦啊
