--- a/2024.10.26.2/DJI_20241020232250_0166_D.md
+++ b/2024.10.26.2/DJI_20241020232250_0166_D.md
@@ -11,29 +11,12 @@
 
 ## 视频备注
 
-总结结果: 这是一段关于学习进步和运动经历的愉快分享，主要内容包括：
+英语听说练习有49.15分
 
-1. **学习成果**
-   - 49分进步到15分，仅用5-6天快速提分
-   - 对取得这个成绩感到非常开心
-   - 认为可能是题目简单或直接检查的原因
+前面都是38 39 42 38 39 48 44分，虽然这套卷子比较简单，0.7的难度，但是49啊，这是第一次这么高，真的太开心了，15分的进步，只花了15天（满分六十分）。这个进步怎么这么快。当然也可能是因为卷子简单，我空欢喜了一场，能有这个分，有一次我有已经很爽了。今天手好酸痛，今天打了羽毛球。今天的体育课好像大多都是自由活动，爽打了45分钟羽毛球。先打双打再打单打，打的手好酸痛。
 
-2. **运动经历**
-   - 今天打了羽毛球，活动了四分钟
-   - 运动后感到特别爽快
+今天下午上数学培优课（广州市的，广州各个头部学校的较头部的学生都在），请的是武汉的专家
 
-3. **学习体验**
-   - 听了武汉专家的课，觉得老师厉害、思路清晰
-   - 基本能听懂但觉得进度太快
-   - 需要做笔记和练习
+老师很厉害，思路清晰，很有阅历学识。我也基本听懂。但是又快又难，需要点talent，需要疯狂写笔记，感觉手已经不是我的了，麻麻的。写字手腕痛，大球手臂痛，现在整只手（右手）都是痛的
 
-4. **身体感受**
-   - 手臂因写作业和打球感到疼痛
-   - 决定早点休息
-
-5. **明日计划**
-   - 5点半起床背书
-   - 保证睡足6小时
-   - 安排学习、练字等任务
-
-整体表达了一种在学习和运动中都获得成就感的愉快心情，虽然有些疲惫但充满干劲。
+今天早睡。每天早上5点半起床背书吧，生物这一沓数都是要看要背的，再把语文背了。等一下练了字就睡觉，可以睡6小时。今天是晚上睡4小时多中午睡半小时，满打满算就也才5小时。今天睡6小时补补觉然后开始背书
