--- a/2024.10.26.2/DJI_20241025232539_0176_D.md
+++ b/2024.10.26.2/DJI_20241025232539_0176_D.md
@@ -10,3 +10,10 @@
 ---
 
 ## 视频备注
+
+刚刚突然想到：欲买桂花同载酒，终不似少年游。感觉和刚刚表达的校运会的观点类似
+
+我现在有时间有经历有机会去体会青春，我缺没有完全地过一个青春，等我以后可能大学或更久，离开学校进入社会了之后可能机会都没有，真就没经历少年游了，不用过这么久，过段时间估计就找不到这样快乐的机会。（现在窗外刮大风，呼呼作响）就像是前段时间看b站上面王心凌的一个视频，评论区里有个高赞数的评论就是说，就是，很想穿越回自己二十岁的时候去听她的啦场演唱会，觉得四十岁来看总不是一个滋味，单自己有一定经济实力的时候，能买得起几百几千块钱的演唱会门票的时候，缺找不回自己二十多岁看到的那个可爱的活泼的少女甜心教主的心中的白月光或者理想型的这个女明星。评论就是，希望这个世界上有机器可以回到过去的几个小时，只需要几个小时，通知想经历之前的快乐(这个估计是想锁自己而不是想说评论，自己想回到几个小时前在运动会重新经历一遍快乐)。现在情绪有点起伏了，特别的有感受，王才十七八岁，没有经历这个阶段，我才正当年，还是在为赋新词强说愁的阶段，我有真的有那种欲说还休欲说还休却道天凉好个秋的感觉(这就是成长吧这就是成长给我时光给我上的课吧)，我也不知道为什么，是不是现在的学生都比较年少易成熟呢，我才十七岁，可能是因为现在的互联网吧，感觉已经见过多样的人生有各种的阅历，学识不一定增加不少 阅历确实(就比如说我高二喜欢玩的key社的游戏，看到了百味人生，比如clannad那句“读作cl写作人生”)。然后就是现在action运动相机2000多块钱没有必要，2000买这个action以前是私宅，不运动，现在我运动了也不会打球扛着一个相机，虽然它很轻，放裤兜基本无感，但是对于运动来说，几十克还是有很大的影响，现在的跑步鞋都是往轻做，越轻越好去设计。我现在这双李宁碳板跑鞋特别轻回弹也不错(突然插入一句其他的评价，对于高三这样的意识流表示我还是理解吧）。扛一个相机还是很不爽，运动会这种学生只能带相机不能带手机这运动相机真的很有用，尽管我没有珍惜好这次机会(实际上在运动会的后几天王都在回味，更多是在伤感和忏悔和希望时光倒流，估计过了三五天渐渐也就吧运动会的想法抛之脑后了)，可能后面都成人礼也挺有用的吧(这个确实是），我带这个相机，就是无感记录，按一下按键就可以记录到一些很重要都瞬间。虽然质量不高，哦4k120fps已经很高了，可能码率有一些，这个是阳光机只能拍大白天，不过也够了，绝大多数的美好记忆都是再大白天晴空万里（是的比如说成人礼那天，胶片都是用iso50的劵拍的，晴空万里，难忘，回味无穷），天气晴朗微风拂面，我觉得也挺好的，当时没有pocket3，我觉得pocket3更适合学生，可以握在手上记录生活，让后一英寸大底拍个夜景也可以，比这个小小的传感器好太多，相比于记录记录好更重要都是记录到，我以前常常纠结于设备之类的，觉得画质不够好，觉得光圈调2 3 还是5.6 人像是半身全身pose怎么摆，其实这都不是最重要的，最重要的是这个视频本身 对于你这个人生对于你以后它的意义价值，这比注意那一点小细节是跟有价值的，这个不拘小节啊，不过不拘小节不是这么用的。我之前包括高二的时候，(现在正在一边说话一边写字帖)，当时和身边想买相机或者刚买相机的人说(这个是当时和小学同学朱冉校际信使互通书信都时候聊到的），就像小红书上的人挨个ccd买个老旧的设备，用来记录是某些瞬间，那些瞬间模拟胶片感搞一堆噪点也好，拍立得垃圾画质也好，拍到那就是足够了，拍好就是交给那些摄影爱好者都事情了，我觉得并不是很重要吧(其实也是很重要的，以后看的时候不管多清晰其实都跟希望能够更清晰，希望记忆更真切)，有最好没有也无所谓吧。以后是不是都可以练字都时候三心二用，一边练字一边用action来录音。我觉得是不是action运动相机可以出一个录音模式，虽然它收音没有锁很好，但是如果说像谁我这样的声音比画面重要的那确实还不错。
+然后就是说化妆，搞个发饰，梳整齐一点头发啊，摆个pose那真的就是平日你的女同学变成今日的女神。真好看啊。反正耶不是我的我也没有这个机会啊。高三生啊，除了学习还有什么，除了学习那就是吃饭吗睡觉吗。睡觉也睡不好，吃饭的话如果没有麦当劳（对于高三时期的我，麦当劳简直就是我的第二饭堂，在麦当劳吃的非常多，消费也非常多，现在上大学我才发现麦当劳怎么这么贵啊，很久不会自己吃一次，不过也可能是高校食堂的价格比广州高中的食堂价格低不少，与麦当劳的差异比较大，广雅的食堂一餐饭也有二十多了和麦当劳差不多了还要排长队）那就只能吃饭饭堂，饭堂的质量又下降了。过段时间还有成人礼啊还有登山啊，过了期中考还有些事情，也算有趣吧，高三上学期，到时候还有艺术节，反正我是不想去看的，又不能走，反正到时候再看情况吧，又是大太阳，到时候看看又是，算了到时候再说吧现在没想好
+啊太好看了，我之前看到六班的一个女生把之前的打羽毛还可以（高高的打羽毛还不错的女生，我现在有一点点印象但是不多了 好像男朋友是新疆生吧，感觉身高什么的有点印象，现在脸上完全没印象了），跑的很快，之前自习室坐我对面，遇到过一次 还行吧，不是说脸很好看，但是很健康，但是是跑步的，穿着超短裤去跑步，那个腿太好看了，又瘦又高又爱运动，我真的喜欢健康的，其他的无所谓，六班，平行班，成绩无所谓，健健康康都好好活着这已经很不错了（现在回头看我怎么这么下头啊什么东西都往日记里说）。看clannad里面的冈崎朋也，高中毕业没上大学，出来大工，但是他有一群很优秀很好的朋友，也有贤妻良母，身边关系也不错，这个酒很不错，有的时候就待在小镇里面，开开心心的快快乐乐地活着 人活着开心就好，不是所有人都需要有很高都追求很大的抱负，拯救地球拯救世界。更多的人守好自己的一亩三分地，平平淡淡地过一生快快乐乐地过一生就很不错嘛(动漫或者说游戏clannad对我的人生观价值观影响真的很大)，还有就是之前高一11班的同学现在是在六班（我与这个同学的故事也是说来话长吧，不过简单地概括那就是成长吧），今天遇到了昨天好像没有印象，今天看到她花了妆，颜值翻了几倍不止，真好，感觉看美女就是一种福分，心情不好的时候看看美女心情就好了(诶现在我好像不是这么觉得了)，反正美女又不是我的（这个表述就不对了，怎么能用属于这个词怎么能物化女性了，当时估计是觉得也算是常见表达或者意识到不应该这么说但是懒得改了）我只是看一下，感叹这个世界上还有这么好看的人呐，开心一下，人活着都时候看看就可以放松预约，从苦海中可以稍稍脱离一小会
+今天录了快二十分钟了，很久了，差不多睡觉了
