--- a/2024.10.26.2/DJI_20241026124601_0177_D.md
+++ b/2024.10.26.2/DJI_20241026124601_0177_D.md
@@ -10,3 +10,7 @@
 ---
 
 ## 视频备注
+
+今天是校运会都后一天，今天感觉状态不是很好，早上一直起不来床，感觉过了校运会之后身体特别特别疲惫。
+然后 感觉全身上下atp都耗光了。镁离子还说镁离子含量太多，神经兴奋强度一般(当时做太多生物题了，关于钙离子镁离子含量与神经系统兴奋度的关系，现在都不记得了)。清醒还是比较清醒的，有一点小困，全身瘫软，整个身子使不上气，感觉就像个丧尸一样。昨天我还觉得怎么现在有点青春的样子有点活力的，今天怎么又变回丧尸了，整个人使不起劲没有很高都效率。好累啊，感觉整个人逗虚脱了，运动会我也没参加什么项目但就是很累。不过就是去个医院也没走多少步一万多步还好啊也以至于虚脱，我去旅行一天走四五万步也没有虚脱这一万步。。也不好说。先睡个午觉吧好难受。家长帮忙整理好桌面，这桌面好整齐，一看就不是王的风格，太干净了，我的话一定是乱摆的，这已经是分门别类的了，我今天还想写点作业的如果待会能起得来酒写点作业，如果醒不来那就睡过去吧也挺好的。
+我的现在真的很喜欢维纳尔多的四季这个专辑，这个是我为数不多的龙特别欣赏的赖的交响乐或者说特别喜欢的，知名度耶非常高，每首歌逗非常好听。感觉现在又逐渐回到了喜欢听这种比较干净的音乐，干净喜欢听这种传统的管弦乐器（实则现在大学了也是这样，对于弦乐器情有独钟，小提琴，吉他，钢琴等）而不是听电子合成乐器。之前喜欢听jpop啊电音啊还有很多电子合成乐器，但是现在发现这种很素的个很素的音乐很好听。有的时候我甚至觉得这个还不够素，最素的是那种钢琴曲(点名A叔)，覆盖的音域很广但是音色比较单一不过也比较饱满，就比如王现在听的就是a叔 触手猴的这些改编曲，不能说水平有多高哦水平也很高但是不能说和那些音乐厅里大师弹的那些特别特别专业的专辑去比，但是我觉得已经很不错了，虽然我拷录出来的没有达到hires的清晰度，但是我觉得完全足够，然后听起来舒服，喜欢就行，干干净净的纯纯粹粹的，我现在是不是变老了就喜欢这个舒舒服服都样子。我才十七岁啊怎么就变老了呢，今天就这么多了先睡觉了
