--- a/2024.10.26.2/DJI_20241006231705_0151_D.md
+++ b/2024.10.26.2/DJI_20241006231705_0151_D.md
@@ -11,14 +11,22 @@
 
 ## 视频备注
 
-1. **英语学习困难**：语法是主要难点，成绩不理想（如60分、25分），在班级中排名靠后。
+今天破防
 
-2. **学习态度**：认为自己努力程度尚可，但效果不佳，感到困惑和无奈。
+又一次英语班级倒数第一
 
-3. **班级情况**：提到班级中男生较多，但对这一情况持保留态度。
+难受
 
-4. **考试表现**：首次周测成绩不理想，对学习内容感到迷茫。
+英语语法一塌糊涂
 
-5. **自我鼓励**：最后表示要“好好学学”，愿意继续努力。
+打开平板看智学网
 
-**建议**：针对英语语法等薄弱环节，制定专项学习计划，寻求老师或同学的帮助，坚持努力会有改善。
+60分才25分，班级E等级，最后一名
+
+年级排名也差
+
+物理成绩还行
+
+有一次周周测物理还挺好
+
+希望英语好好学学
